--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^0.5.6
   url_launcher: ^5.4.1
   google_sign_in: ^4.1.1
+  uni_links: ^0.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +38,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.3"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/stories-logo.png"
 
 
 # For information on the generic Dart part of this file, see the
