--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
 
   assets:
     - assets/credentials.json
+    - assets/google-photos-logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
