--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   url_launcher: ^5.4.1
   google_sign_in: ^4.1.1
   uni_links: ^0.2.0
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
