--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   google_sign_in: ^4.1.1
   uni_links: ^0.2.0
   intl: ^0.16.1
-
+  flutter_spinkit: ^4.1.2
+  flutter_sound: ^1.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
