--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,11 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   shared_preferences: ^0.5.6
   url_launcher: ^5.4.1
-  google_sign_in: ^4.1.1
+  google_sign_in: ^4.5.1
   uni_links: ^0.2.0
   intl: ^0.16.1
   flutter_spinkit: ^4.1.2
-  flutter_sound: ^1.1.4
+  audioplayers: ^0.15.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
